update spider spider_test